--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,8 @@
     We predict that this wine is from class {{ predicted_class }}
     <br>
 
-    <img src="{{ url_for('static', filename='upward_sloping_chart.png') }}" alt="">
+    <img src="{{ url_for('static', filename='upward_sloping_chart.png') }}"
+        alt="upward sloping chart" width="400px">
 
     <a href="/">Go back home</a>
 </body>
