Fixed results page to only show sentiment label as one word

--- a/templates/results.html
+++ b/templates/results.html
@@ -26,7 +26,7 @@
                 The model's prediction is
               </td>
               <td class="align-middle" style="width: 33%; text-align: center; font-size: 3em;">
-                {{ prediction }}
+                {{ label }}
               </td>
               <!-- Customize this text to describe the result -->
               <td class="align-middle" style="width: 33%">
