Adjusted text and images of the app to reflect theme of project

--- a/templates/results.html
+++ b/templates/results.html
@@ -5,7 +5,7 @@
       This is the title that appears in the browser tab.
       Replace it with the title of your app
     -->
-    <title>Spring Fawn Predictor</title>
+    <title>Animal Crossing: New Horizons Sentiment Rater</title>
     <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='bootstrap.min.css') }}">
   </head>
   <body>
@@ -23,14 +23,14 @@
           <tbody>
             <tr>
               <td class="align-middle" style="width: 33%; text-align: right;">
-                The model's prediction is
+                It seems you have a
               </td>
               <td class="align-middle" style="width: 33%; text-align: center; font-size: 3em;">
                 {{ label }}
               </td>
               <!-- Customize this text to describe the result -->
               <td class="align-middle" style="width: 33%">
-                hundreds of spring antelope fawns
+                opinion of this game.
               </td>
             </tr>
           </tbody>
@@ -42,8 +42,8 @@
               Replace this with something relevant, maybe a freshly-generated
               matplotlib graph?
             -->
-            <img src="{{ url_for('static', filename='upward_sloping_chart.png') }}" 
-              alt="upward sloping chart" width="50%">
+            <img src="{{ url_for('static', filename='isabelle_announcement.jpg') }}" 
+              alt="Isabelle from Animal Crossing: New Horizons" width="50%">
           </div>
         </div>
         <hr>
