Added thank you message to results screen

--- a/templates/results.html
+++ b/templates/results.html
@@ -42,6 +42,7 @@
               Replace this with something relevant, maybe a freshly-generated
               matplotlib graph?
             -->
+           <h2> Thank you for your feedback!</h2>   
             <img src="{{ url_for('static', filename='isabelle_announcement.jpg') }}" 
               alt="Isabelle from Animal Crossing: New Horizons" width="50%">
           </div>
